# quinthesis

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_PROPOSAL.md  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
backend/: __init__.py  auth.py  auth_jwt.py  config.py  council.py  database.py  encryption.py  main.py  migrate.py  models.py  notifications.py  oauth.py  oauth_state.py  openrouter.py  openrouter_provisioning.py  rate_limit.py  storage.py  storage_local.py  stripe_client.py
backend/migrations/: 000_create_base_schema.sql  001_create_users_table.sql  002_create_api_keys_table.sql  003_add_user_id_to_conversations.sql  005_user_credits.sql  006_usage_based_billing.sql  008_update_deposit_options.sql  009_add_lower_deposit_options.sql  010_remove_20_deposit_option.sql  012_add_openrouter_key_version.sql
backend/tests/: conftest.py
docs/: CLEANUP_PLAN.md  DATA_STORAGE.md  DESIGN_account_page.md  IMPLEMENTATION_PLAN_security_fixes.md  IMPLEMENTATION_PLAN_stripe_credits.md  IMPLEMENTATION_PLAN_usage_based_billing.md  INDEX.md  MULTI_USER_ROADMAP.md  NEW_INQUIRY_UX_REDESIGN.md  OAUTH_IMPLEMENTATION_PLAN.md  PHASE1_IMPLEMENTATION_PLAN.md  UI_REDESIGN_PROPOSAL_opus_claude.md  UI_UX_REVIEW.md  about.md  byok_friction_recommendations_codex.md  production_readiness_review_codex.md
docs/analysis/: codebase-snapshot-claude.md
docs/archive/: UI_REDESIGN_PROPOSAL_claude.md  ui-redesign-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.css  (+7 more)
(+113 files in other folders)
